# dots.ocr

./: CLAUDE.md  DEPLOYMENT.md  api_server.py  batch_ocr.py  client.py  combine_md.py  pyproject.toml  runpod_setup.sh
