[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dots-ocr"
version = "1.0.0"
description = "dots.ocr: Multilingual Document Layout Parsing in one Vision-Language Model"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "rednote-hilab"},
]
keywords = ["ocr", "document-parsing", "vision-language-model", "layout-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML dependencies (PyTorch installed separately with pip)
    "transformers==4.51.3",
    "accelerate",
    "flash-attn==2.8.0.post2",
    "vllm==0.9.1",
    
    # Document processing
    "PyMuPDF",
    "qwen_vl_utils",
    
    # API and web frameworks
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    
    # Model repositories
    "huggingface_hub",
    "modelscope",
    
    # HTTP client
    "openai",
    "httpx",
    
    # Utilities
    "tqdm",
    "numpy",
    "pillow",
    "requests",
    
    # Optional demo dependencies
    "gradio",
    "gradio_image_annotation",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

demo = [
    "streamlit",
    "gradio",
    "gradio_image_annotation",
]

[project.urls]
Homepage = "https://github.com/rednote-hilab/dots.ocr"
Repository = "https://github.com/rednote-hilab/dots.ocr"

[tool.uv]
# Default PyPI index
index-url = "https://pypi.org/simple"

[tool.hatchling.build.targets.wheel]
packages = ["dots_ocr"]